[package]
name = "permia-chainspec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia chain specifications"

[dependencies]
# Reth
reth-chainspec = { path = "../../chainspec" }
reth-primitives-traits = { path = "../../primitives-traits" }

# Alloy
alloy-primitives.workspace = true
alloy-genesis.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Utilities
once_cell.workspace = true
