[package]
name = "permia-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia consensus implementation (PermiaHash PoW + BFT)"

[dependencies]
# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Cryptography
blake3 = "1.5"
sha3 = "0.10"

# Utilities
thiserror.workspace = true

[dev-dependencies]
proptest = "1.4"
