[package]
name = "permia-finality"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia BFT finality layer for fast block confirmation"

[dependencies]
# Permia
permia-consensus = { path = "../consensus" }

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }

# Async
tokio = { workspace = true, features = ["sync", "time"] }

# Utilities
tracing.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
