[package]
name = "permia-miner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia CPU miner for PermiaHash PoW"

[dependencies]
# Permia
permia-consensus = { path = "../consensus" }

# Reth
reth-chainspec = { path = "../../chainspec" }
reth-primitives-traits = { path = "../../primitives-traits" }

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread"] }

# Utilities
tracing.workspace = true
thiserror.workspace = true
rand = "0.8"
num_cpus = "1.16"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
