[package]
name = "permia-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia node implementation"

[dependencies]
# Permia crates
permia-consensus = { path = "../consensus" }

# Alloy
alloy-primitives.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
