[package]
name = "permia-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia node implementation"

[dependencies]
# Permia crates
permia-consensus = { path = "../consensus" }

# Reth
reth-chainspec = { path = "../../chainspec" }
reth-consensus = { path = "../../consensus/consensus" }
reth-node-builder = { path = "../../node/builder" }
reth-node-api = { path = "../../node/api" }
reth-primitives-traits = { path = "../../primitives-traits" }
reth-ethereum-primitives = { path = "../../ethereum/primitives" }

# Alloy
alloy-primitives.workspace = true

# Utilities
eyre.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
