[package]
name = "permia-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia node implementation"

[dependencies]
# Permia crates
permia-consensus = { path = "../consensus" }
permia-gossip = { path = "../gossip" }

# Reth
reth-chainspec = { path = "../../chainspec" }
reth-consensus = { path = "../../consensus/consensus" }
reth-node-builder = { path = "../../node/builder" }
reth-node-api = { path = "../../node/api" }
reth-primitives-traits = { path = "../../primitives-traits" }
reth-ethereum-primitives = { path = "../../ethereum/primitives" }
reth-node-ethereum = { path = "../../ethereum/node" }
reth-provider = { path = "../../storage/provider" }
reth-transaction-pool = { path = "../../transaction-pool" }
reth-network = { path = "../../net/network" }
reth-eth-wire = { path = "../../net/eth-wire" }
reth-payload-primitives = { path = "../../payload/primitives" }
reth-ethereum-engine-primitives = { path = "../../ethereum/engine-primitives" }
reth-engine-local = { path = "../../engine/local" }
reth-evm = { path = "../../evm/evm" }
reth-tracing = { path = "../../tracing" }

# Alloy
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

# Utilities
eyre.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
