[package]
name = "permia-services"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permia service proofs for Storage, CDN, and Compute"

[dependencies]
# Alloy
alloy-primitives = { workspace = true, features = ["serde"] }

# Crypto
sha3 = "0.10"

# Utilities
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
